fix UI jumpiness, remove number input spinners and blue focus outlines

--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,21 @@ input {
   height: 35px;
   font-size: 24px;
   font-weight: lighter;
+}
 
+input:focus{
+  outline: none;
+  box-shadow: none;
+  outline: none;
+}
+
+/* remove spinners from number input boxes */
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
 }
 
 .message-top {
@@ -102,6 +116,11 @@ button:hover {
 
 button:active {
   background-color: #c60075;
+}
+
+button:focus {
+  outline:0;
+  background-color: #EB008B;
 }
 
 .button-group {
